--- a/hvrskyworthvr/src/main/res/layout/include_rtr_video_info.xml
+++ b/hvrskyworthvr/src/main/res/layout/include_rtr_video_info.xml
@@ -24,23 +24,34 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="226dp"
         android:layout_marginEnd="48dp"
+        android:ellipsize="end"
+        android:lineSpacingExtra="5dp"
+        android:maxLines="2"
+        android:minHeight="48dp"
         android:textColor="@color/color_white"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="海豚是智商很高的动物，它们有着可爱的形态和活泼的性格，在海洋馆的动物表演环节中一直受人瞩目。通过人类的训练，海豚能够表演许多精彩的节目，比如玩篮球、钻铁环、跳高、与人握手互动、和人一起“唱歌”等，甚至有些海豚还可以画画。" />
+        tools:text="海豚是智商很高的动物，它们有着可爱的形态和活泼的性格，在海洋馆的动物表演环节中一直受人瞩目。" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bt_video_play"
-        android:layout_width="64dp"
-        android:layout_height="34dp"
+        android:layout_width="68dp"
+        android:layout_height="33dp"
         android:layout_marginTop="29dp"
-        android:background="#f00"
+        android:background="@drawable/shape_main_video_play_bg"
+        android:drawableStart="@drawable/sky_worth_main_video_play_icon"
+        android:drawablePadding="6dp"
         android:gravity="center"
+        android:includeFontPadding="false"
+        android:paddingStart="10dp"
+        android:paddingTop="6dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="6dp"
         android:text="@string/video_play"
         android:textColor="@color/color_white"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/tv_video_intro"
         app:layout_constraintTop_toBottomOf="@+id/tv_video_intro" />
 
