--- a/hvrskyworthvr/src/main/res/layout/rtr_video_sub_fragment.xml
+++ b/hvrskyworthvr/src/main/res/layout/rtr_video_sub_fragment.xml
@@ -16,13 +16,15 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vp_video_list_detail"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:layout_marginBottom="50dp"
         android:clipToPadding="false"
         android:paddingStart="48dp"
         android:paddingEnd="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_video_info" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
