--- a/hvrskyworthvr/src/main/res/layout/include_rtr_video_info.xml
+++ b/hvrskyworthvr/src/main/res/layout/include_rtr_video_info.xml
@@ -35,8 +35,8 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="海豚是智商很高的动物，它们有着可爱的形态和活泼的性格，在海洋馆的动物表演环节中一直受人瞩目。" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/bt_video_play"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_video_play"
         android:layout_width="68dp"
         android:layout_height="33dp"
         android:layout_marginTop="29dp"
@@ -61,9 +61,9 @@
         android:layout_height="5dp"
         android:layout_marginEnd="17dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/bt_video_play"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_video_play"
         app:layout_constraintEnd_toStartOf="@+id/tv_video_index"
-        app:layout_constraintTop_toTopOf="@+id/bt_video_play" />
+        app:layout_constraintTop_toTopOf="@+id/tv_video_play" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_video_index"
@@ -83,7 +83,7 @@
         android:layout_height="0dp"
         android:textColor="@color/color_white"
         android:textSize="13sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/bt_video_play"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_video_play"
         app:layout_constraintEnd_toEndOf="@+id/tv_video_intro"
         tools:text="/26" />
 
@@ -91,10 +91,9 @@
         android:id="@+id/view_flash_bg"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:elevation="2dp"
-        app:layout_constraintBottom_toBottomOf="@+id/bt_video_play"
-        app:layout_constraintEnd_toEndOf="@+id/bt_video_play"
-        app:layout_constraintStart_toStartOf="@+id/bt_video_play"
-        app:layout_constraintTop_toTopOf="@+id/bt_video_play" />
+        app:layout_constraintBottom_toBottomOf="@+id/tv_video_play"
+        app:layout_constraintEnd_toEndOf="@+id/tv_video_play"
+        app:layout_constraintStart_toStartOf="@+id/tv_video_play"
+        app:layout_constraintTop_toTopOf="@+id/tv_video_play" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
