--- a/hvrskyworthvr/src/main/res/layout/rtr_exo_control_view_landscape_normal.xml
+++ b/hvrskyworthvr/src/main/res/layout/rtr_exo_control_view_landscape_normal.xml
@@ -8,169 +8,223 @@
 
     <ImageButton
         android:id="@id/exo_back"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="62dp"
+        android:layout_height="62dp"
         android:background="@null"
         android:padding="20dp"
         android:scaleType="center"
-        android:src="@drawable/icon_exo_back"
+        android:src="@drawable/rtr_icon_exo_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
+
+    <View
+        android:id="@+id/view_title_holder"
+        android:layout_width="94dp"
+        android:layout_height="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_media_video_intro_small"
+        android:layout_width="76dp"
+        android:layout_height="40dp"
+        android:background="@drawable/shape_media_video_intro_small_bg"
+        android:drawablePadding="-2dp"
+        android:gravity="center"
+        android:paddingStart="6dp"
+        android:paddingTop="6dp"
+        android:paddingEnd="6dp"
+        android:paddingBottom="6dp"
+        android:text="@string/media_video_intro"
+        android:textColor="@color/color_white"
+        android:textSize="19sp"
+        android:visibility="visible"
+        app:drawableStartCompat="@drawable/icon_video_intro_small"
+        app:layout_constraintBottom_toBottomOf="@+id/exo_text_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/exo_text_title" />
 
     <TextView
         android:id="@id/exo_text_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="350dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="63dp"
         android:ellipsize="end"
-        android:maxLines="2"
-        android:layout_marginTop="8dp"
+        android:maxLines="1"
         android:textColor="@color/color_white"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/exo_back"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toStartOf="@+id/tv_media_video_intro_small"
+        app:layout_constraintStart_toEndOf="@+id/view_title_holder"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_goneMarginEnd="151dp"
         tools:text="年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀年曆史、7代人傳承，中國京劇第一世家堪稱人類藝術史奇觀！世家堪稱人類藝術史奇觀" />
 
-    <ImageButton
-        android:id="@id/exo_reset_content"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/shape_video_icon_bg"
-        android:scaleType="centerInside"
-        android:src="@drawable/icon_video_adjust"
+    <RadioGroup
+        android:id="@+id/rg_media_video"
+        android:layout_width="76dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape_media_video_extra_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.38"
-        tools:ignore="ContentDescription" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ImageButton
-        android:id="@id/exo_link_vr"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/shape_video_icon_bg"
-        android:scaleType="centerInside"
-        android:src="@drawable/icon_video_vr"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/exo_reset_content"
-        app:layout_constraintTop_toBottomOf="@+id/exo_reset_content"
-        tools:ignore="ContentDescription" />
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/rtr_exo_reset_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:button="@null"
+            android:drawableTop="@drawable/rtr_icon_video_adjust"
+            android:drawablePadding="6dp"
+            android:gravity="center"
+            android:paddingStart="10dp"
+            android:paddingTop="15dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="15dp"
+            android:text="@string/media_video_adjust"
+            android:textColor="@color/color_white" />
 
-    <ImageButton
-        android:id="@id/exo_play"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="15dp"
-        android:background="@null"
-        android:padding="5dp"
-        android:src="@drawable/icon_exo_play"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="ContentDescription" />
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/rtr_exo_link_vr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:button="@null"
+            android:drawableTop="@drawable/rtr_icon_video_vr"
+            android:drawablePadding="6dp"
+            android:gravity="center"
+            android:paddingStart="10dp"
+            android:paddingTop="15dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="15dp"
+            android:text="@string/media_video_vr"
+            android:textColor="@color/color_white" />
 
-    <ImageButton
-        android:id="@id/exo_pause"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="15dp"
-        android:background="@null"
-        android:padding="5dp"
-        android:src="@drawable/icon_exo_pause"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="ContentDescription" />
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/rtr_exo_setting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:button="@null"
+            android:drawableTop="@drawable/icon_video_intro_big"
+            android:drawablePadding="6dp"
+            android:gravity="center"
+            android:paddingStart="10dp"
+            android:paddingTop="15dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="15dp"
+            android:text="@string/media_video_intro_big"
+            android:textColor="@color/color_white" />
+
+    </RadioGroup>
 
     <ImageButton
         android:id="@+id/exo_replay"
-        android:layout_width="104dp"
-        android:layout_height="104dp"
-        android:background="@drawable/shape_video_icon_bg"
-        android:scaleType="center"
-        android:src="@drawable/icon_exo_replay"
+        android:layout_width="76dp"
+        android:layout_height="76dp"
+        android:background="@null"
+        android:padding="10dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/rtr_icon_exo_replay"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.41"
+        app:layout_constraintHorizontal_bias="0.443"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
     <ImageButton
         android:id="@+id/exo_next_video"
-        android:layout_width="104dp"
-        android:layout_height="104dp"
-        android:background="@drawable/shape_video_icon_bg"
-        android:scaleType="center"
-        android:src="@drawable/icon_exo_play_next"
+        android:layout_width="76dp"
+        android:layout_height="76dp"
+        android:background="@null"
+        android:padding="10dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/rtr_icon_exo_play_next"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.59"
+        app:layout_constraintHorizontal_bias="0.557"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
-
-    <ImageButton
-        android:id="@id/exo_setting"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="15dp"
-        android:background="@null"
-        android:padding="5dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/icon_exo_setting"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="ContentDescription" />
 
     <View
         android:id="@id/exo_progress_placeholder"
         android:layout_width="0dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@id/exo_setting"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_height="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/exo_position"
+        app:layout_constraintEnd_toStartOf="@id/exo_duration"
+        app:layout_constraintStart_toEndOf="@id/exo_position"
+        app:layout_constraintTop_toTopOf="@+id/exo_position" />
 
-    <TextView
+    <ImageButton
+        android:id="@id/exo_play"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@null"
+        android:padding="5dp"
+        android:src="@drawable/rtr_icon_exo_play"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <ImageButton
+        android:id="@id/exo_pause"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="16dp"
+        android:background="@null"
+        android:padding="5dp"
+        android:src="@drawable/rtr_icon_exo_pause"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@id/exo_position"
-        android:layout_width="wrap_content"
+        android:layout_width="45dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginBottom="31dp"
         android:gravity="center_vertical|start"
         android:includeFontPadding="false"
         android:textColor="@color/color_white"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/exo_duration"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/exo_duration"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/view_pos_holder"
         tools:text="66:66" />
 
-    <TextView
+    <View
+        android:id="@+id/view_pos_holder"
+        android:layout_width="86dp"
+        android:layout_height="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@id/exo_duration"
-        android:layout_width="wrap_content"
+        android:layout_width="45dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_marginBottom="31dp"
+        android:gravity="center|end"
         android:includeFontPadding="false"
         android:textColor="@color/color_white"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/exo_setting"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/exo_link_vr"
-        app:layout_constraintTop_toBottomOf="@+id/exo_link_vr"
-        app:layout_constraintVertical_bias="0.65"
         tools:text="17:12" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -178,54 +232,45 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_vr_mode_linking_text_bg"
-        android:paddingStart="128dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="26dp"
-        android:paddingBottom="5dp"
-        android:text="正在同步展示VR眼镜中的视频"
-        android:textColor="@color/color_F2"
-        android:textSize="32sp"
+        android:paddingStart="19dp"
+        android:paddingTop="13dp"
+        android:paddingEnd="19dp"
+        android:paddingBottom="13dp"
+        android:text="@string/media_video_vr_sync"
+        android:textColor="@color/color_white"
+        android:textSize="23sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/appCompatImageView4"
-        android:layout_width="129dp"
-        android:layout_height="108dp"
-        android:src="@drawable/sky_worth_vr_mode_linking_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView4"
-        app:layout_constraintStart_toStartOf="@+id/appCompatTextView4" />
+        app:layout_constraintVertical_bias="0.87" />
 
     <ProgressBar
         android:id="@+id/pb_time_bar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="3dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="26dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:progressDrawable="@drawable/video_pb_pd_sp_blog"
-        app:layout_constraintBottom_toTopOf="@+id/exo_setting"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/exo_position"
+        app:layout_constraintEnd_toStartOf="@id/exo_duration"
+        app:layout_constraintStart_toEndOf="@id/exo_position"
+        app:layout_constraintTop_toTopOf="@+id/exo_position" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_disconnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:constraint_referenced_ids="exo_position,exo_link_vr,exo_duration,exo_back,exo_reset_content"
-        tools:ignore="UnknownId" />
+        android:visibility="gone"
+        app:constraint_referenced_ids="exo_back,rg_media_video,view_pos_holder,view_title_holder" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_connect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        app:constraint_referenced_ids="appCompatImageView4,appCompatTextView4,pb_time_bar" />
+        app:constraint_referenced_ids="appCompatTextView4,pb_time_bar,tv_media_video_intro_small" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
