--- a/hvrskyworthvr/src/main/res/values/colors.xml
+++ b/hvrskyworthvr/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="color_white_a20">#33FFFFFF</color>
     <color name="color_white_a40">#66FFFFFF</color>
     <color name="color_white_a60">#99FFFFFF</color>
+    <color name="color_white_a80">#CCFFFFFF</color>
     <color name="color_black">#000000</color>
     <color name="color_F6">#F6F6F6</color>
 
