--- a/hvrskyworthvr/src/main/res/drawable/shape_color_recycler_bg.xml
+++ b/hvrskyworthvr/src/main/res/drawable/shape_color_recycler_bg.xml
@@ -2,10 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="180"
-        android:endColor="@color/color_theme_warm_start"
-        android:startColor="@color/color_theme_warm_end"
+        android:angle="90"
+        android:endColor="@android:color/transparent"
+        android:startColor="@color/color_black_a40"
         android:type="linear"
         android:useLevel="true" />
 </shape>
-
