--- a/hvrskyworthvr/src/main/res/layout/include_rtr_video_media_player_view.xml
+++ b/hvrskyworthvr/src/main/res/layout/include_rtr_video_media_player_view.xml
@@ -31,4 +31,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="@drawable/shape_color_recycler_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
