--- a/hvrskyworthvr/src/main/res/values/colors.xml
+++ b/hvrskyworthvr/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="color_black_a40">#66000000</color>
     <color name="color_black_a50">#80000000</color>
     <color name="color_black_a60">#99000000</color>
+    <color name="color_black_a80">#CC000000</color>
     <color name="color_black_a90">#E6000000</color>
 
     <color name="color_theme_cold_start">#E6000822</color>
