--- a/hvrskyworthvr/src/main/res/layout/rtr_show_item_video_list.xml
+++ b/hvrskyworthvr/src/main/res/layout/rtr_show_item_video_list.xml
@@ -2,20 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipChildren="false"
-    android:clipToPadding="false">
+    android:layout_width="250dp"
+    android:layout_height="165dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="235dp"
-        android:layout_height="132dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="250dp"
+        android:layout_height="140dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_video_list_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextureView
             android:id="@+id/texture_view_item"
@@ -34,7 +32,7 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_video_list_title"
         android:layout_width="235dp"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
