--- a/hvrskyworthvr/src/main/res/layout/activity_show.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_show.xml
@@ -18,7 +18,6 @@
     <View
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="255dp"
         android:background="@drawable/shape_show_color_recycler_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,5 +35,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/iv_mine_about"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
