1.重点完成首页保存二级分类下的选中状态，以及恢复选中状态

--- a/hvrskyworthvr/src/main/res/drawable/shape_main_video_play_bg.xml
+++ b/hvrskyworthvr/src/main/res/drawable/shape_main_video_play_bg.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="180"
-        android:endColor="#315AC5"
-        android:startColor="#54BCE9"
+        android:endColor="#FFB23F"
+        android:startColor="#FFD159"
         android:type="linear"
         android:useLevel="true" />
     <corners android:radius="6dp" />
