--- a/hvrskyworthvr/src/main/res/drawable/shape_color_recycler_bg.xml
+++ b/hvrskyworthvr/src/main/res/drawable/shape_color_recycler_bg.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="90"
-        android:endColor="@android:color/transparent"
-        android:startColor="@color/color_black_a40"
+        android:angle="180"
+        android:endColor="@color/color_black_a60"
+        android:startColor="@android:color/transparent"
         android:type="linear"
         android:useLevel="true" />
 </shape>
