--- a/hvrskyworthvr/src/main/res/layout/rtr_show_item_video_list.xml
+++ b/hvrskyworthvr/src/main/res/layout/rtr_show_item_video_list.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="250dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -11,6 +11,8 @@
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toTopOf="@+id/tv_video_list_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,13 +23,46 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <androidx.constraintlayout.utils.widget.ImageFilterView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_video_list_bg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            app:round="8dp"
             tools:src="#F00" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_center_media"
+            android:layout_width="36dp"
+            android:layout_height="34dp"
+            android:layout_gravity="end"
+            android:visibility="gone"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="rotate_media_play.json"
+            app:lottie_loop="true" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_video_list_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="@color/color_white_a60"
+            android:textSize="12sp"
+            tools:text="35:45" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_video_classify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:paddingStart="8dp"
+            android:paddingTop="4dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="4dp"
+            android:textColor="@color/color_white"
+            android:textSize="12sp"
+            tools:text="人文经典" />
 
     </androidx.cardview.widget.CardView>
 
