1.给item添加渐变背景。2.修复了在某些情况下，部分小item也会出现AE动画图标的bug

--- a/hvrskyworthvr/src/main/res/layout/rtr_show_item_video_list.xml
+++ b/hvrskyworthvr/src/main/res/layout/rtr_show_item_video_list.xml
@@ -30,6 +30,11 @@
             android:scaleType="centerCrop"
             tools:src="#F00" />
 
+        <View
+            android:background="@drawable/shape_media_item_bg"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"/>
+
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottie_center_media"
             android:layout_width="36dp"
