--- a/hvrskyworthvr/src/main/res/drawable/shape_media_item_bg.xml
+++ b/hvrskyworthvr/src/main/res/drawable/shape_media_item_bg.xml
@@ -7,4 +7,7 @@
         android:startColor="@android:color/transparent"
         android:type="linear"
         android:useLevel="true" />
+    <corners
+        android:topLeftRadius="8dp"
+        android:topRightRadius="8dp" />
 </shape>
